apps/k3s/kubernetes-dashboard/base/service.yaml
---
# Source: kubernetes-dashboard/templates/service.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  labels:
    
    app.kubernetes.io/name: kubernetes-dashboard
    helm.sh/chart: kubernetes-dashboard-6.0.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.7.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kubernetes-dashboard
    
    kubernetes.io/cluster-service: "true"
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: https
    name: https
  selector:

    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: kubernetes-dashboard
